--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Birthday!</title>
+  <title>Happiest Birthday!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <div class="birthday-container">
+  <div class="card">
     <div class="balloons">
       <div class="balloon red"></div>
       <div class="balloon blue"></div>
       <div class="balloon green"></div>
       <div class="balloon yellow"></div>
     </div>
-    <div class="wish-box">
-      <h1>Happy Birthday!</h1>
-      <p>Wishing you a day filled with joy, laughter, and unforgettable moments.
-        may this special day filled with all the wonderful things that make you happy!
-      </p>
+    <h1>🎂Happiest Birthday to youu! 🎉</h1>
+    <p>Wishing you a day filled with love, joy, and laughter.
+      may your day filled with everything you want.
+      Enjoy your day.Hope you have an Amazing day!
+    </p>
+    <div class="cake">
+      <div class="candle"></div>
+      <div class="layer layer1"></div>
+      <div class="layer layer2"></div>
+      <div class="layer layer3"></div>
+      
     </div>
   </div>
 </body>
